--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     <title>Группа "Дайте Танк"</title>
     <style>
         body {
-            background-color: #b7b7b7; /* Серый фон */
+            background-color: #b7b7b7; 
             font-family: Courier New, monospace;
             color: #333;
             text-align: center;
@@ -20,18 +20,18 @@
             display: inline-block;
             margin: 10px;
             padding: 10px 20px;
-            background-color: #999999; /* Цвет кнопок */
+            background-color: #999999; 
             color: white;
             text-decoration: none;
             border-radius: 5px;
         }
         .disabled-button {
-            background-color: #666666; /* Серый цвет для неактивной кнопки */
-            pointer-events: none; /* Отключение клика */
-            cursor: not-allowed; /* Указатель при наведении */
+            background-color: #666666;
+            pointer-events: none; 
+            cursor: not-allowed; 
         }
 		a:hover {
-            background-color: #666666; /* Цвет кнопок при наведении */
+            background-color: #666666; 
         }
         footer {
             margin-top: 20px;
