--- a/history.html
+++ b/history.html
@@ -5,40 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #b7b7b7; /* Серый фон */
+            background-color: #b7b7b7; 
             font-family: Courier New, monospace;
             color: #333;
             text-align: center;
             margin: 0;
-			display: flex; /* Используем flexbox для расположения элементов */
+			display: flex; 
             padding: 20px;
         }
         nav {
-            width: 200px; /* Ширина бокового меню */
-            background-color: #f4f4f4; /* Фон для навигации */
-            padding: 10px; /* Отступы внутри меню */
+            width: 200px; 
+            background-color: #f4f4f4; 
+            padding: 10px; 
         }
          a {
-            display: block; /* Столбиковое расположение ссылок */
-            margin: 5px 0; /* Отступы между ссылками */
-            padding: 8px; /* Отступы внутри ссылок */
-            background-color: #999999; /* Цвет кнопок */
+            display: block; 
+            margin: 5px 0; 
+            padding: 8px; 
+            background-color: #999999; 
             color: white;
             text-decoration: none;
-            border-radius: 4px; /* Скругление углов кнопок */
-            text-align: center; /* Центрирование текста */
+            border-radius: 4px; 
+            text-align: center; 
         }
         .disabled-button {
-            background-color: #666666; /* Серый цвет для неактивной кнопки */
-            pointer-events: none; /* Отключение клика */
-            cursor: not-allowed; /* Указатель при наведении */
+            background-color: #666666; 
+            pointer-events: none; 
+            cursor: not-allowed;
         }
 		a:hover {
-            background-color: #666666; /* Цвет кнопок при наведении */
+            background-color: #666666; 
 		}
         .main-content {
-            flex-grow: 1; /* Основной контент занимает оставшееся пространство */
-            padding: 20px; /* Отступы внутри основного контента */
+            flex-grow: 1; 
+            padding: 20px; 
         }
         footer {
 			margin-top: 20px;
